k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lava-duel
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lava-duel
  template:
    metadata:
      labels:
        app: lava-duel
    spec:
      containers:
        - name: lava-duel
          image: europe-west4-docker.pkg.dev/however-you-please/lava-duel/lava-duel:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
          resources:
            requests:
              cpu: '50m'
              memory: '64Mi'
            limits:
              cpu: '250m'
              memory: '256Mi'
