k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lava-duel-service
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: lava-duel
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
